# anxiety

./: DEVELOPMENT.md  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
anxiety/: constants.py  main.py  plist.xml  should_be_deleted.py
anxiety/nice_desk/: handler.py  main.py
anxiety/should_be_deleted/: hanlder.py  main.py
download_cleaner/: plist.xml
tests/: conftest.py  test_zen_desktop.py  test_zen_downloads.py
