[project]
name = "anxiety"
version = "0.1.3"
description = "Personal project to keep my fucking download folder organized for once."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arrow>=1.4.0",
    "typer>=0.21.1",
    "watchdog>=6.0.0",
]


[project.scripts]
anxiety = "anxiety.main:app"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pyfakefs>=6.0.0",
    "pytest>=9.0.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
